--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     </div>
 
     <div class="score-container">
-      <div>
+      <div class="user">
         <div class="user-score">0</div>
         <div>You</div>
       </div>
-      <div>
+      <div class="bot">
         <div class="bot-score">0</div>
         <div>Bot</div>
       </div>
