Include Logic(JS) and some style

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     
     <div class="options">
       <div class="option" id="rock">
-        <img src="rock.png" alt="Rock Img" />
+        <img src="rock.png" alt="Rock" />
       </div>
       <div class="option" id="paper">
-        <img src="paper.png" alt="Paper Img" />
+        <img src="paper.png" alt="Paper" />
       </div>
       <div class="option" id="scissor">
-        <img src="scissor.png" alt="Scissor Img" />
+        <img src="scissor.png" alt="Scissor" />
       </div>
     </div>
 
